Fix styling issue on small devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,7 +66,7 @@
 
 .chirp-box {
   padding: 30px;
-  width: 500px;
+  max-width: 500px;
   margin-left: 0px;
   display: flex;
 }
